--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -7,8 +7,8 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h4><b>CONTÁCTANOS</b></h4>
-				<p>JUST TAKE A LOOK</p>
+				<h4><b>¿Tienes alguna pregunta?</b></h4>
+				<p>Escríbenos</p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -18,7 +18,7 @@
 	<div class="container w">
 		<div class="row centered">
 			<br><br>
-			<form action='{% url 'contacto-f' %}' method='post'>
+			<form action='#' method='post'>
             <label for='nombre'>Nombre:</label>
             <input id='nombre' type='text' name='nombre' placeholder='Nombre y Apellido' required='' />
             <label for='email'>Email:</label>
