--- a/templates/footermod.html
+++ b/templates/footermod.html
@@ -10,10 +10,9 @@
 						<ul id="downMenu">
 							<li class="active"><a href="{% url 'inicio-estudiante' %}">Home</a></li>
 							<li><a href="{% url 'modulo1' %}">Module 1</a></li>
-							<li><a href="#">Module 2</a></li>
-							<li><a href="#">Module 3</a></li>
-							<li><a href="#">Module 4</a></li>
-							<li><a class="last" href="#">Recursos</a></li>
+							<li><a href="{% url 'modulo2' %}">Module 2</a></li>
+							<li><a href="{% url 'modulo3' %}">Module 3</a></li>
+							<li><a href="{% url 'modulo4' %}">Module 4</a></li>
 		</div><!-- container -->
 	</div><!-- Footer -->
 {% endif %}
@@ -26,9 +25,9 @@
 					<div class="col-md-8 text-right dm">
 						<ul id="downMenu">
 							<li><a href="{% url 'modulo1' %}">Module 1</a></li>
-							<li><a href="#">Module 2</a></li>
-							<li><a href="#">Module 3</a></li>
-							<li><a href="#">Module 4</a></li>
+							<li><a href="{% url 'modulo2' %}">Module 2</a></li>
+							<li><a href="{% url 'modulo3' %}">Module 3</a></li>
+							<li><a href="{% url 'modulo4' %}">Module 4</a></li>
 		</div><!-- container -->
 	</div><!-- Footer -->
 {% endif %}
