--- a/templates/plantilla-lessons-module4.html
+++ b/templates/plantilla-lessons-module4.html
@@ -1,5 +1,5 @@
 
-      <!-- Modulo 2 -->
+      <!-- modulo 4 -->
 
       <div id="wh">
           <div class="row">
@@ -20,80 +20,80 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 1 - Lesson 1 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo2-unidad1-lesson1-tm1' %}">Theme 1</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson1-tm2' %}">Theme 2</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson1-tm3' %}">Theme 3</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson1-tm4' %}">Theme 4</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson1-tm1' %}">Theme 1</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson1-tm2' %}">Theme 2</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson1-tm3' %}">Theme 3</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson1-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 1 - Lesson 2<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo2-unidad1-lesson2-tm1' %}">Theme 1</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson2-tm2' %}">Theme 2</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson2-tm3' %}">Theme 3</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson2-tm4' %}">Theme 4</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson2-tm1' %}">Theme 1</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson2-tm2' %}">Theme 2</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson2-tm3' %}">Theme 3</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson2-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 1 - Lesson 3 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo2-unidad1-lesson3-tm1' %}">Theme 1</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson3-tm2' %}">Theme 2</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson3-tm3' %}">Theme 3</a></li>
-                <li><a href="{% url 'modulo2-unidad1-lesson3-tm4' %}">Theme 4</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson3-tm1' %}">Theme 1</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson3-tm2' %}">Theme 2</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson3-tm3' %}">Theme 3</a></li>
+                <li><a href="{% url 'modulo4-unidad1-lesson3-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 2 - Lesson 4 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo2-unidad2-lesson1-tm1' %}">Theme 1</a></li>
-                <li><a href="{% url 'modulo2-unidad2-lesson1-tm2' %}">Theme 2</a></li>
-                <li><a href="{% url 'modulo2-unidad2-lesson1-tm3' %}">Theme 3</a></li>
-                <li><a href="{% url 'modulo2-unidad2-lesson1-tm4' %}">Theme 4</a></li>
+                <li><a href="{% url 'modulo4-unidad2-lesson1-tm1' %}">Theme 1</a></li>
+                <li><a href="{% url 'modulo4-unidad2-lesson1-tm2' %}">Theme 2</a></li>
+                <li><a href="{% url 'modulo4-unidad2-lesson1-tm3' %}">Theme 3</a></li>
+                <li><a href="{% url 'modulo4-unidad2-lesson1-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 2 - Lesson 5 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo2-unidad2-lesson2-tm1' %}">Theme 1</a></li>
-          			<li><a href="{% url 'modulo2-unidad2-lesson2-tm2' %}">Theme 2</a></li>
-          			<li><a href="{% url 'modulo2-unidad2-lesson2-tm3' %}">Theme 3</a></li>
-          			<li><a href="{% url 'modulo2-unidad2-lesson2-tm4' %}">Theme 4</a></li>
+                <li><a href="{% url 'modulo4-unidad2-lesson2-tm1' %}">Theme 1</a></li>
+          			<li><a href="{% url 'modulo4-unidad2-lesson2-tm2' %}">Theme 2</a></li>
+          			<li><a href="{% url 'modulo4-unidad2-lesson2-tm3' %}">Theme 3</a></li>
+          			<li><a href="{% url 'modulo4-unidad2-lesson2-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 2 - Lesson 6 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo2-unidad2-lesson3-tm1' %}">Theme 1</a></li>
-          			<li><a href="{% url 'modulo2-unidad2-lesson3-tm2' %}">Theme 2</a></li>
-          			<li><a href="{% url 'modulo2-unidad2-lesson3-tm3' %}">Theme 3</a></li>
-          			<li><a href="{% url 'modulo2-unidad2-lesson3-tm4' %}">Theme 4</a></li>
+                <li><a href="{% url 'modulo4-unidad2-lesson3-tm1' %}">Theme 1</a></li>
+          			<li><a href="{% url 'modulo4-unidad2-lesson3-tm2' %}">Theme 2</a></li>
+          			<li><a href="{% url 'modulo4-unidad2-lesson3-tm3' %}">Theme 3</a></li>
+          			<li><a href="{% url 'modulo4-unidad2-lesson3-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 3 - Lesson 7 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo2-unidad3-lesson1-tm1' %}">Theme 1</a></li>
-          			<li><a href="{% url 'modulo2-unidad3-lesson1-tm2' %}">Theme 2</a></li>
-          			<li><a href="{% url 'modulo2-unidad3-lesson1-tm3' %}">Theme 3</a></li>
-          			<li><a href="{% url 'modulo2-unidad3-lesson1-tm4' %}">Theme 4</a></li>
+                <li><a href="{% url 'modulo4-unidad3-lesson1-tm1' %}">Theme 1</a></li>
+          			<li><a href="{% url 'modulo4-unidad3-lesson1-tm2' %}">Theme 2</a></li>
+          			<li><a href="{% url 'modulo4-unidad3-lesson1-tm3' %}">Theme 3</a></li>
+          			<li><a href="{% url 'modulo4-unidad3-lesson1-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Unit 3 - Lesson 8 <b class="caret"></b></a>
                <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo2-unidad3-lesson2-tm1' %}">Theme 1 </a></li>
-      			    <li><a href="{% url 'modulo2-unidad3-lesson2-tm2' %}">Theme 2</a></li>
-           			<li><a href="{% url 'modulo2-unidad3-lesson2-tm3' %}">Theme 3</a></li>
-           			<li><a href="{% url 'modulo2-unidad3-lesson2-tm4' %}">Theme 4</a></li>
+                <li><a href="{% url 'modulo4-unidad3-lesson2-tm1' %}">Theme 1 </a></li>
+      			    <li><a href="{% url 'modulo4-unidad3-lesson2-tm2' %}">Theme 2</a></li>
+           			<li><a href="{% url 'modulo4-unidad3-lesson2-tm3' %}">Theme 3</a></li>
+           			<li><a href="{% url 'modulo4-unidad3-lesson2-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
