--- a/templates/plantilla3.html
+++ b/templates/plantilla3.html
@@ -1,5 +1,5 @@
 
-      <!-- Main component for a primary marketing message or call to action -->
+      <!-- Modulo 1 -->
 
       <div id="wh">
           <div class="row">
@@ -20,80 +20,80 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 1 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson1-tm2' %}">Read</a></li>
-                <li><a href="{% url 'modulo1-unidad1-tm1' %}">Vocabulary</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson1-tm3' %}">Listen</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson1-tm4' %}">Speak</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson1-tm2' %}">Theme 1</a></li>
+                <li><a href="{% url 'modulo1-unidad1-tm1' %}">Theme 2</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson1-tm3' %}">Theme 3</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson1-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 2<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson2-tm1' %}">Listen</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson2-tm2' %}">Vocabulary</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson2-tm3' %}">Read</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson2-tm4' %}">Write</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson2-tm1' %}">Theme 1</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson2-tm2' %}">Theme 2</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson2-tm3' %}">Theme 3</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson2-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 3 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson3-tm1' %}">Listen </a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson3-tm2' %}">Vocabulary </a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson3-tm3' %}">Languaje</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson3-tm4' %}">Write</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson3-tm1' %}">Theme 1 </a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson3-tm2' %}">Theme 2 </a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson3-tm3' %}">Theme 3</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson3-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                   <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 4 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson4-tm1' %}">Vocabulary </a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson4-tm2' %}">Listen </a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson4-tm3' %}">Read</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson4-tm4' %}">Speak</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson4-tm1' %}">Theme 1 </a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson4-tm2' %}">Theme 2 </a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson4-tm3' %}">Theme 3</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson4-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 5 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson5-tm1' %}">Listen </a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm2' %}">Languaje </a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm3' %}">Read</a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm4' %}">Vocabulary</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson5-tm1' %}">Theme 1 </a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm2' %}">Theme 2 </a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm3' %}">Theme 3</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson5-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 6 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson6-tm1' %}">Vocabulary </a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm2' %}">Read</a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm3' %}">Languaje</a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm4' %}">Speak</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson6-tm1' %}">Theme 1 </a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm2' %}">Theme 2</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm3' %}">Theme 3</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson6-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 7 <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson7-tm1' %}">Vocabulary</a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm2' %}">Languaje</a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm3' %}">Listen</a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm4' %}">Speak</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson7-tm1' %}">Theme 1</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm2' %}">Theme 2</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm3' %}">Theme 3</a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson7-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
                <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 8 <b class="caret"></b></a>
                <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson8-tm1' %}">Vocabulary </a></li>
-      			<li><a href="{% url 'modulo1-unidad1-lesson8-tm2' %}">Listen</a></li>
-     			<li><a href="{% url 'modulo1-unidad1-lesson8-tm3' %}">Languaje</a></li>
-     			<li><a href="{% url 'modulo1-unidad1-lesson8-tm4' %}">Read</a></li>
+                <li><a href="{% url 'modulo1-unidad1-lesson8-tm1' %}">Theme 1 </a></li>
+      			<li><a href="{% url 'modulo1-unidad1-lesson8-tm2' %}">Theme 2</a></li>
+     			<li><a href="{% url 'modulo1-unidad1-lesson8-tm3' %}">Theme 3</a></li>
+     			<li><a href="{% url 'modulo1-unidad1-lesson8-tm4' %}">Theme 4</a></li>
                 <li class="divider"></li>
                   </ul></li>
 
