--- a/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad2-lesson1-tm3.html
@@ -1,172 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-   
-    <title>Modulo Ingles Básico</title>
+{% extends 'plantilla2.html' %}
+{% load staticfiles %}
+{% block title %} Module 4 - Unit 2 - Lesson 4 {% endblock %}
 
-
-    <link href="vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style-modulo.css" rel="stylesheet">
-</head>
-    
-<body >
-
-<!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Curso Ingles</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="inicio-estudiante.html">INICIO</a></li>
-            <li class="dropdown active">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MODULO <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="modulo1.html">Ingles Básico</a></li>
-                <li><a href="modulo1-unidad1.html">Unidad 1</a></li>
-                <li><a href="#">Unidad 2</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Temario</li>
-                <li><a href="#">Multimedia</a></li>
-                <li><a href="#">Actividaddes</a></li>
-              </ul>
-            </li>
-            <li><a href="#">RECURSOS</a></li>
-            <li><a href="#">LOREM</a></li>
-            
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Configuración</a></li>
-            <li class="active"><a href="#">Salir</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
+{%  block content %}
     
    <div class="container initial">
     <ol class="breadcrumb">
-  <li>Modulo 4</li>
-        <li><a href="{% url 'modulo1-unidad1' %}">Unidad 2</a></li>
-        <li class="active">Lesson 1</li> 
+        <li><a href="{% url 'modulo4' %}">Module 4</a></li>
+        <li><a href="{% url 'modulo4-unidad1' %}">Unit 2</a></li>
+        <li >Lesson 4</li>
+        <li class="active">Theme 3</li> 
         
 </ol>
-    
-    
-      <!-- Main component for a primary marketing message or call to action -->
-        
-     <div id="wh">
-          <div class="row">
-  <div class="col-sm-3">
-    <div class="sidebar-nav">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
-            <span class="sr-only">Desplegar navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <span class="visible-xs navbar-brand">Sidebar menu</span>
-        </div>
-        <div class="navbar-collapse collapse sidebar-navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 1 <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson1-tm2' %}">Read</a></li>
-                <li><a href="{% url 'modulo1-unidad1-tm1' %}">Vocabulary</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson1-tm3' %}">Listen</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson1-tm4' %}">Speak</a></li>
-                <li class="divider"></li>
-                  </ul></li>
 
-                  <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 2<b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="{% url 'modulo1-unidad1-lesson2-tm1' %}">Listen</a></li>
-                <li><a href="{% url 'modulo1-unidad1-lesson2-tm2' %}">Vocabulary</a></li>
-                <li><a href="#">...</a></li>
-                <li><a href="#">...</a></li>
-                <li class="divider"></li>
-                  </ul></li>
-
-                  <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 3 <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">... </a></li>
-                <li><a href="#">... </a></li>
-                <li><a href="#">...</a></li>
-                <li><a href="#">...</a></li>
-                <li class="divider"></li>
-                  </ul></li>
-
-                  <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 4 <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Possessive adjectives </a></li>
-                <li><a href="#">Family members Numbers 20-100 </a></li>
-                <li><a href="#">Identifying numbers Stress on numbers</a></li>
-                <li><a href="#">Description of pictures</a></li>
-                <li class="divider"></li>
-                  </ul></li>
-
-              <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 5 <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Possessive ’s </a></li>
-            <li><a href="#">Personality adjectives </a></li>
-            <li><a href="#">People talking about their families Possessive ’s</a></li>
-            <li><a href="#">Describing a family tree</a></li>
-                <li class="divider"></li>
-                  </ul></li>
-
-               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 6 <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">to be: questions </a></li>
-            <li><a href="#">Jobs </a></li>
-            <li><a href="#">Information to complete a form Intonation in questions</a></li>
-            <li><a href="#">An email describing a family photo</a></li>
-                <li class="divider"></li>
-                  </ul></li>
-
-              <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 7 <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">a and an this/these and that/those</a></li>
-            <li><a href="#">Sports, subjects andclassroom objects Days of the week</a></li>
-            <li><a href="#">Discussing schoolsubjects</a></li>
-            <li><a href="#">A letter</a></li>
-                <li class="divider"></li>
-                  </ul></li>
-
-               <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lesson 8 <b class="caret"></b></a>
-               <ul class="dropdown-menu">
-                <li><a href="#">Wh- questionswith to be </a></li>
-            <li><a href="#">Adjectives describing physical appearance</a></li>
-          <li><a href="#">Discussing physical characteristics Intonation in questions</a></li>
-          <li><a href="#">Descriptions of people</a></li>
-                <li class="divider"></li>
-                  </ul></li>
-
-            <li><a href="#">let’s work together <span class="badge">A family collage</span></a></li>
-            <li><a href="#">Self-assessment</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-  </div>
+    {% include 'plantilla-lessons-module4.html' %}
               
   <div class="col-sm-9 col-md-9">
       <h2>FOCUS ON LANGUAGE</h2>
@@ -206,13 +53,13 @@ right now, these days, at the moment.</b> <br>
     </div>
 
       <div class="centered">
-        <img src="img/Modulo4Unidad2Lesson1Theme3img1.PNG" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
       </div>
 
       <p>8. Complete the sentences with words from the box.</p>
 
       <div class="centered">
-        <img src="img/Modulo4Unidad2Lesson1Theme3img2.PNG" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img2.PNG' %}" class="img-responsive" alt="No found"/>
       </div>
 
     <div class="col-sm-12 col-md-12">
@@ -241,7 +88,7 @@ rubbish. (recycle)</li>
 
       <div class="col-sm-6 col-md-6">
       <div class="centered">
-        <img src="img/Modulo4Unidad2Lesson1Theme3img3.PNG" class="img-responsive" alt="No found"/>
+        <img src="{% static 'img/modulo4/Modulo4Unidad2Lesson1Theme3img3.PNG' %}" class="img-responsive" alt="No found"/>
       </div>
       </div>
     </div>
@@ -253,29 +100,6 @@ rubbish. (recycle)</li>
        </div>
     </div><!--div-->
 </div>
+</div>
 
-<!-- FOOTER -->
-  <div id="f">
-    <div class="container">
-      <div class="col-md-6 text-left copy">
-            <p>Copyright &copy; All Rights Reserved.</p>
-          </div>
-          <div class="col-md-6 text-right dm">
-            <ul id="downMenu">
-              <li><a href="inicio-estudiante.html">Inicio</a></li>
-              <li class="active"><a href="modulo1.html">Modulo</a></li>
-              <li><a href="#">Recursos</a></li>
-              <li><a href="#">Lorem</a></li>
-                            <li class="last"><a href="#">Configuración</a></li>
-    </div><!-- container -->
-  </div><!-- Footer -->
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="javascript/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js">
-</script>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock %}
