--- a/templates/plantilla2.html
+++ b/templates/plantilla2.html
@@ -65,16 +65,16 @@
                   <a tabindex="-1" href="{% url 'modulo3' %}">Module 3 - How We Live<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                       <li><a tabindex="-1" href="{% url 'modulo3-unidad1' %}">Unity 1 - What we eat</a></li>
-                      <li><a href="{% url 'modulo3-unidad1' %}">Unity 2 -  Take good care</a></li>
-                      <li><a href="{% url 'modulo3-unidad1' %}">Unity 3 - Time for fun</a></li>
+                      <li><a href="{% url 'modulo3-unidad2' %}">Unity 2 -  Take good care</a></li>
+                      <li><a href="{% url 'modulo3-unidad3' %}">Unity 3 - Time for fun</a></li>
                   </ul>
                 </li>
                 <li class="dropdown-submenu">
-                  <a tabindex="-1" href="{% url 'modulo1' %}">Module 4 - Protect the Earth<span class="caret"></span></a>
+                  <a tabindex="-1" href="{% url 'modulo4' %}">Module 4 - Protect the Earth<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                      <li><a tabindex="-1" href="#">Unity 1 - The world we live in</a></li>
-                      <li><a href="#">Unity 2 -  Problems and solutions</a></li>
-                      <li><a href="#">Unity 3 - Changes to make</a></li>
+                      <li><a tabindex="-1" href="{% url 'modulo3-unidad1' %}">Unity 1 - The world we live in</a></li>
+                      <li><a href="{% url 'modulo3-unidad2' %}">Unity 2 -  Problems and solutions</a></li>
+                      <li><a href="{% url 'modulo3-unidad3' %}">Unity 3 - Changes to make</a></li>
                   </ul>
                 </li>
                 <li role="separator" class="divider"></li>
@@ -132,16 +132,16 @@
                   <a tabindex="-1" href="{% url 'modulo3' %}">Module 3 - How We Live<span class="caret"></span></a>
                   <ul class="dropdown-menu">
                       <li><a tabindex="-1" href="{% url 'modulo3-unidad1' %}">Unity 1 - What we eat</a></li>
-                      <li><a href="{% url 'modulo3-unidad1' %}">Unity 2 -  Take good care</a></li>
-                      <li><a href="{% url 'modulo3-unidad1' %}">Unity 3 - Time for fun</a></li>
+                      <li><a href="{% url 'modulo3-unidad2' %}">Unity 2 -  Take good care</a></li>
+                      <li><a href="{% url 'modulo3-unidad3' %}">Unity 3 - Time for fun</a></li>
                   </ul>
                 </li>
                 <li class="dropdown-submenu">
-                  <a tabindex="-1" href="{% url 'modulo1' %}">Module 4 - Protect the Earth<span class="caret"></span></a>
+                  <a tabindex="-1" href="{% url 'modulo4' %}">Module 4 - Protect the Earth<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                      <li><a tabindex="-1" href="#">Unity 1 - The world we live in</a></li>
-                      <li><a href="#">Unity 2 -  Problems and solutions</a></li>
-                      <li><a href="#">Unity 3 - Changes to make</a></li>
+                      <li><a tabindex="-1" href="{% url 'modulo3-unidad1' %}">Unity 1 - The world we live in</a></li>
+                      <li><a href="{% url 'modulo3-unidad2' %}">Unity 2 -  Problems and solutions</a></li>
+                      <li><a href="{% url 'modulo3-unidad3' %}">Unity 3 - Changes to make</a></li>
                   </ul>
                 </li>
                 <li role="separator" class="divider"></li>
