--- a/templates/plantilla1.html
+++ b/templates/plantilla1.html
@@ -36,7 +36,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="{% url 'index' %}">HOME</a></li>
-            <li><a href="{% url 'curso' %}">INSTITUTION</a></li>
+            <li><a href="{% url 'curso' %}">INFORMATION</a></li>
             <li><a href="{% url 'contacto' %}"><i class="fa fa-envelope-o"></i> CONTACT</a></li>
           </ul>
         </div><!--/.nav-collapse -->
