--- a/templates/curso.html
+++ b/templates/curso.html
@@ -7,8 +7,8 @@
 		<div class="container">
 			<div class="row centered">
 				<div class="col-lg-8 col-lg-offset-2">
-				<h4><b>INGLES POR MODULOS</b></h4>
-				<p>JUST TAKE A LOOK</p>
+				<h4><b>INFORMATION OF THIS PROJECT</b></h4>
+				<p></p>
 				</div>
 			</div><!-- row -->
 		</div><!-- container -->
@@ -18,22 +18,24 @@
 	<div class="container w">
 		<div class="row centered">
 			<br><br>
+
 			<div class="col-lg-4">
 				<i class="fa fa-desktop"></i>
 				<h4>MODULO 1</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+				<img src="../static/img/logo_png.png" class="img-responsive" alt="" width="50%" />
+				<p>T</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-cogs"></i>
 				<h4>MODULO 2</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+				<p>T</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-eye"></i>
 				<h4>MODULO 3</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+				<p>T</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
 		<br>
@@ -42,13 +44,13 @@
 			<div class="col-lg-4">
 				<i class="fa fa-heart"></i>
 				<h4>MODULO 4</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+				<p>T</p>
 			</div><!-- col-lg-4 -->
 
 			<div class="col-lg-4">
 				<i class="fa fa-list-alt"></i>
 				<h4>MODULO 5</h4>
-				<p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+				<p>T</p>
 			</div><!-- col-lg-4 -->
 		</div><!-- row -->
 	</div><!-- container -->
