--- a/templates/paginaDocente/eventos-estudiantes.html
+++ b/templates/paginaDocente/eventos-estudiantes.html
@@ -49,7 +49,7 @@
                         <tbody>
                           <tr>
                               <td>
-                                <h4>{{ user.first_name }} {{ estudiante.estudiante.id.last_name }}</h4>
+                                <h4>{{ user.first_name }} {{ user.last_name }}</h4>
                               </td>
                               <td>
                                 <h4>{{ log.tiempo }}</h4>
