--- a/templates/contenidos/unidad2/modulo2-unidad3.html
+++ b/templates/contenidos/unidad2/modulo2-unidad3.html
@@ -32,7 +32,7 @@
     </thead>
     <tbody>
       <tr>
-          <td><b><a href="{% url 'modulo1-unidad1-lesson4-tm2' %}">Lesson 7</a></b> <p></p></td>
+          <td><b><a href="{% url 'modulo2-unidad3-lesson1-tm2' %}">Lesson 7</a></b> <p></p></td>
 
           <td><p>Celebrations Ordinal numbers</p></td>
 
@@ -43,7 +43,7 @@
 
       </tr>
       <tr>
-        <td><b><a href="{% url 'modulo1-unidad1-lesson5-tm2' %}">Lesson 8</a></b> <p></p></td>
+        <td><b><a href="{% url 'modulo2-unidad3-lesson2-tm2' %}">Lesson 8</a></b> <p></p></td>
           <td><p> Holidays </p></td>
 
         <td><p>Wh- questions </p></td>
@@ -52,7 +52,7 @@
       </tr>
 
         <tr>
-            <td><b><a href="{% url 'modulo1-unidad1-lesson6-tm2' %}">Let’s work together: A special place – promoting tourism in Colombia </a></b> <p></p></td>
+            <td><b><a href="#">Let’s work together: A special place – promoting tourism in Colombia </a></b> <p></p></td>
               
 
           </tr>
