--- a/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm3.html
+++ b/templates/contenidos/unidad3/modulo3-unidad2-lesson1-tm3.html
@@ -21,6 +21,11 @@
         <hr>
       <p>9. Complete the dialogue with the phrases in the box. Then listen to check your answers.</p>
 
+    <audio controls>
+      <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK74.mp3' %}" type="audio/mpeg">
+      Your browser does not support the audio element. (74)
+    </audio>
+
       <div class="centered">
         <img src="{% static 'img/modulo3/Modulo3Unidad2Lesson1Theme3img1.PNG' %}" class="img-responsive" alt="No found"/>
       </div>
