--- a/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm3.html
+++ b/templates/contenidos/unidad4/modulo4-unidad3-lesson2-tm3.html
@@ -23,6 +23,11 @@
       <p>7. Listen to some information about environmentalist Marina Silva.
 Choose which sentence is correct, A or b.</p>
 
+    <audio controls>
+      <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK102.mp3' %}" type="audio/mpeg">
+      Your browser does not support the audio element. (102)
+    </audio>
+
     <div class="col-sm-12 col-md-12">
       <li>1. A. Marina was one of eleven brothers and sisters.</li>
       <li>b. Marina was in the rainforest for eleven years.</li>
@@ -60,7 +65,7 @@ Choose which sentence is correct, A or b.</p>
       <div class="col-sm-6 col-md-6">
 
     <audio controls>
-      <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK103.mp3" type="audio/mpeg">
+      <source src="{% static 'audios/module1/ENGLISH%20PLEASE%20LEVEL%201%20TRACK103.mp3' %}" type="audio/mpeg">
       Your browser does not support the audio element. (103)
     </audio>
 
