--- a/static/css/style-modulo.css
+++ b/static/css/style-modulo.css
@@ -128,6 +128,75 @@ body {
     text-transform: uppercase;
 }
 
+.hw4 {
+    background: url(../img/header-mod3.jpg) no-repeat center top;
+    margin-top: 10px;
+    padding-top:20px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 300px;
+    width: 100%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.hw4 h1 {
+    margin-top: 50px;
+    color:#E4E1E1;
+    font-size: 70px;
+    font-weight: 300;
+    letter-spacing: 3px;
+}
+
+.hw4 h2 {
+    color: #CECECE;
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+
+.hw5 {
+    background: url(../img/header-mod4.jpg) no-repeat center top;
+    margin-top: 10px;
+    padding-top:20px;
+    text-align: center;
+    background-attachment: relative;
+    background-position: center center;
+    min-height: 300px;
+    width: 100%;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+.hw5 h1 {
+    margin-top: 50px;
+    color:#E4E1E1;
+    font-size: 70px;
+    font-weight: 300;
+    letter-spacing: 3px;
+}
+
+.hw5 h2 {
+    color: #CECECE;
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
 
 .table thead{
     background-color: #9EBAD7;
