--- a/templates/paginaDocente/inicio-profe.html
+++ b/templates/paginaDocente/inicio-profe.html
@@ -67,7 +67,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="{% url 'primer-modulo-notas' %}">
+                            <a href="{% url 'notas' %}">
                                 <div class="panel-footer">
                                     <span class="pull-left">Ver</span>
                                     <span class="pull-right"><i class="fa fa-arrow-circle-right"></i></span>
