--- a/templates/paginaDocente/edit-notas.html
+++ b/templates/paginaDocente/edit-notas.html
@@ -1,5 +1,5 @@
 {% extends 'plantilla-prof.html' %}
-{% block title %} Agregar Nota Estudiante {% endblock %}
+{% block title %} Editar Nota Estudiante {% endblock %}
 
 {%  block content %}
 
@@ -11,14 +11,14 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Agregar Notas <small> Estudiante {{ estudiante.first_name }} {{ estudiante.last_name }}</small>
+                            Editar Notas <small> Estudiante {{ estudiante.first_name }} {{ estudiante.last_name }}</small>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
                             <a href="#"><i class="fa fa-fw fa-table"></i> Nota </a> 
                             </li>
                             <li class="active">
-                                 Agregar Nota Estudiante 
+                                 Editar Nota Estudiante 
                             </li>
                         </ol>
                     </div>
@@ -30,20 +30,21 @@
 
                     <p><b>Estudiante:</b> {{ estudiante.first_name }} {{ estudiante.last_name }}</p>
 
-                    <form id="add_nota" action="#" method="post">
+                    <form id="edit_nota" action="#" method="post">
                     {% csrf_token %}
                       <div class="form-group">
                         <div class="col-md-7 col-lg-7">
+                        {% for row in notas %}
                           <div class="col-md-2 col-lg-2">
                             <strong style="font-size: 18px;"> <p>Nota</p> </strong>
                           </div>
-                            <div class="col-md-5 col-lg-5"><input class="form-control" type="text" id="nota" name="nota" >
+                            <div class="col-md-5 col-lg-5"><input class="form-control" type="text" id="nota" name="nota" value="{{row.nota}}">
                           </div> 
                           <div class="col-lg-12 col-md-12"></div>
                           <div class="col-md-2 col-lg-2">
                             <strong style="font-size: 17px;"> <p>Detalle</p> </strong>
                           </div>
-                            <div class="col-md-5 col-lg-5"><input class="form-control" type="text" id="detalle" name="detalle" >
+                            <div class="col-md-5 col-lg-5"><input class="form-control" type="text" id="detalle" name="detalle" value="{{row.detalle}}">
                           </div> 
                           <div class="col-lg-12 col-md-12"></div>
                           <div class="col-md-2 col-lg-2">
@@ -54,7 +55,7 @@
                             <select class="form-control" id="actividad" name="actividad">
                               <option value="" >Seleccionar</option>
                               {% for row in actividad %}
-                               <option id='actividad' value="{{ row.id }}">{{ row.nombre }}</option>
+                               <option id='actividad' value="{{row.actividad}}">{{ row.nombre }}</option>
                               {% endfor %}
                             </select>
                           </div> 
@@ -65,10 +66,10 @@
                            <br/><br/>
                            <br/><br/>
                            <div class="col-lg-7 col-md-7 text-right">
-                             <input onclick="add_n({{estudiante.id}})" class="btn btn-primary" type="submit" value="Guardar" />
+                             <input onclick="edit_n({{estudiante.id}})" class="btn btn-primary" type="submit" value="Guardar" />
                              <a class="btn btn-default" href="{% url 'agregar-curso' %}">Cancelar</a>                              
                            </div>
-                          
+                          {% endfor %}
                         </div>
                       </div>
                      
@@ -87,14 +88,14 @@
 
 {% block javascript %}
 <script type="text/javascript">
-function add_n(student){
+function edit_n(student){
   // debugger
   var pk = student;
   var nota = ::nota::;
   var detalle = ::detalle::;
   var actividad = ::actividad::;
   console.log(pk);
-  $('#add_nota').submit(function() {
+  $('#edit_nota').submit(function() {
     $.ajax({
             url: '/note/add/'+pk+'/student',
             data: { "csrfmiddlewaretoken": "{{ csrf_token }}", "nota": nota, "detalle":detalle, "actividad":actividad, "estudiante" : pk },
