--- a/templates/paginaDocente/notas.html
+++ b/templates/paginaDocente/notas.html
@@ -1,5 +1,5 @@
 {% extends 'plantilla-prof.html' %}
-{% block title %} Primer Módulo Notas {% endblock %}
+{% block title %} Notas {% endblock %}
 
 {%  block content %}
 
@@ -11,17 +11,17 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Primer Modulo <small> Registro de Notas</small>
+                            Notas Estudiante <small> {{ estudiante.first_name }} {{ estudiante.last_name }}</small>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
-                                <i class="fa fa-fw fa-table"> </i> Módulos
+                                <i class="fa fa-fw fa-table"> </i> Grupos
                             </li>
                             <li>
-                                Primer Módulo
+                                Grupo ...
                             </li>
                             <li class="active">
-                                Registro Notas
+                                Notas 
                             </li>
                         </ol>
                     </div>
@@ -60,7 +60,35 @@
                         <button type="button" class="btn btn-primary">Enviar</button>
                     </div> -->
 
-                    
+                    <div class="panel">
+                        <div class="panel-body">
+                        <div class="table-responsive">
+                        <table class="table table-bordered table-hover table-striped">
+                            <thead>
+                            <tr>
+                              <th>Nota</th>
+                              <th>Detalle</th>
+                              <th>Actividad</th>
+                              <th>Funciones</th>
+                            </tr>  
+                            </thead>    
+                              {% for row in notas %}
+                              <tbody>
+                                <tr>
+                                <td>{{ row.nota }}</td>
+                                <td>{{ row.detalle }}</td>
+                                <td>{{ row.actividad }}</td>
+                                <td>
+                                    <a class="btn btn-primary" href="{% url 'editar-curso' pk=row.pk %}">Editar</a> 
+                                    <a class="btn btn-danger" href="{% url 'eliminar-curso' pk=row.pk %}">Borrar</a>
+                                </td> 
+                                </tr>
+                              </tbody>
+                              {% endfor %}
+                        </table>
+                        </div>
+                        </div>        
+                    </div>
                     
                 </div>
 
