--- a/templates/paginaDocente/primer-modulo-estudiantes.html
+++ b/templates/paginaDocente/primer-modulo-estudiantes.html
@@ -1,5 +1,5 @@
 {% extends 'plantilla-prof.html' %}
-{% block title %} Primer Módulo Estudiantes {% endblock %}
+{% block title %} Grupo {{ grupo.Curso.nombre }} - {{ grupo.nombre }} {% endblock %}
 
 {%  block content %}
 
@@ -30,7 +30,7 @@
 
                 <div class="row">
 
-                <div class="col-sm-7 col-md-7">
+                <div class="col-sm-12 col-md-12">
                 <div class="panel panel-default">
                             <div class="panel-heading">
                                 <h3 class="panel-title"><i class="fa fa-list-alt fa-fw"></i> Lista de Estudiantes Inscritos</h3>
@@ -74,9 +74,9 @@
                     {% endfor %}
                  </table>
                 </div>
-                            <div class="text-right">
+                            <!-- <div class="text-right">
                                     <a href="{% url 'reporte-estudiante' %}">Descargar Reporte <i class="fa fa-arrow-circle-right"></i></a>
-                                </div>
+                                </div> -->
                 </div>
                 </div>
                 </div>
