--- a/templates/paginaDocente/curso.html
+++ b/templates/paginaDocente/curso.html
@@ -1,5 +1,5 @@
 {% extends 'plantilla-prof.html' %}
-{% block title %} Grupos {% endblock %}
+{% block title %} Cursos {% endblock %}
 
 {%  block content %}
 
@@ -11,11 +11,11 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Grupos <small> Lista</small>
+                            Cursos <small> Lista</small>
                         </h1>
                         <ol class="breadcrumb">
                             <li class="active">
-                                <i class="fa fa-fw fa-table"> </i> Grupos
+                                <i class="fa fa-fw fa-table"> </i> Cursos
                             </li>
                         </ol>
                     </div>
