--- a/templates/paginaDocente/eliminar-estudiante.html
+++ b/templates/paginaDocente/eliminar-estudiante.html
@@ -94,7 +94,7 @@
         </div>
       </div>
           <div class="col-md-5">
-            <a href="#" class="btn btn-lg btn-success" data-toggle="modal" data-target="#basicModal" data-tooltip><i class="fa fa-fw fa-trash"></i>Eliminar</a>
+            <a href="#" class="btn btn-lg btn-danger" data-toggle="modal" data-target="#basicModal" data-tooltip><i class="fa fa-fw fa-trash"></i>Eliminar</a>
           </div>
     </form>
     
