--- a/templates/paginaDocente/eventos-estudiantes.html
+++ b/templates/paginaDocente/eventos-estudiantes.html
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">
-                            Grupo {{ grupo.Curso.nombre }} - {{ grupo.nombre }} <small> Estudiantes Registrados</small>
+                            Eventos Estudiante<small> {{ user.first_name }} {{ user.last_name }} </small>
                         </h1>
                         <ol class="breadcrumb">
                             <li>
@@ -38,10 +38,7 @@
                             <div class="panel-heading">
                                 <h3 class="panel-title"><i class="fa fa-list-alt fa-fw"></i> Lista de Eventos por Estudiante</h3>
                             </div>
-                            <div class="panel-body" style="
-    overflow-y: scroll;
-    height: 400px;
-">
+                            <div class="panel-body" style="overflow-y: scroll;height: 400px;">
                                 <div class="table-responsive">
                 <table class="table table-bordered table-hover table-striped" data-spy="scroll">
                 <thead>
