--- a/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm2.html
+++ b/templates/contenidos/unidad1/modulo1-unidad1-lesson3-tm2.html
@@ -41,7 +41,7 @@
         <div id="respuestas-bd">
             <div id="estudiante_id" hidden="false">{{estudiante.id.id}}</div>
             {% for row in respuesta %}
-                <div id="actividad_id" hidden="false"><label>{{ row.pregunta.actividad.id }}</label></div>
+                <div id="actividad_id" hidden="false">{{ row.pregunta.actividad.id }}</div>
                 <div id="{{ row.id }}" hidden="false"><li>{{ row.descripcion }}</li></div>            
             {% endfor %}
         </div>
@@ -182,7 +182,7 @@
                 var malas = 0;
                 respuesta_sistema = "";
                 respuesta_usuario = "";
-                var act_id;
+                var actividad = $("#actividad_id").html();
                 var estudiante = $("#estudiante_id").html();
 
               $("#respuestas-bd li").each(function()
@@ -204,11 +204,6 @@
                 alert("Debe llenar todos los campos");
                 return;
               }
-              $("#actividad_id label").each(function()
-              {
-                var descripcion =$(this).html();
-                act_id.push(descripcion);
-              });
 
               calificar(buenas,malas,"resultado",actividad,estudiante)
               //alert("cantidad de respuestas sistema " + array_res_correctas.length);
@@ -307,11 +302,11 @@
 
               var n = nota.toFixed(1);
               $("#" + name_div).html("<strong>Tu resultado es :</strong> " + buenas +"/" + total + " <strong>Tu nota es:</strong> " + n);
-              guardar_actividad(activi,n,buenas)
+              guardar_actividad(activi,n,buenas,estu)
         }
 
       function guardar_actividad(activi, n, buenas, estu){
-              // debugger
+              debugger
               var pk = estu;
               var actividad = activi;
               var nota = n;
@@ -319,10 +314,9 @@
                 $.ajax({
                         url: 'note/'+pk+'/activity',
                         data: { "csrfmiddlewaretoken": "{{ csrf_token }}", "nota": nota, "actividad":actividad, "pk": pk , "detalle":buenas},
-                        type: $(this).attr('method'),
+                        type: 'POST',
                         success: function() {
-                          alert("guardo respuesta")
-
+                                            console.log(pk, actividad, nota)
                       }
                 })
                 return false;
